bk_ida/gccida/c1/operands_match_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/reload.c:2571:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/reload.c:2582:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v5.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/reload.c:2584:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v3)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/reload.c:2592:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)y->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/reload.c:2599:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v9.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/reload.c:2601:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/reload.c:2601:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y)); 
                 ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/operands_match_p/src/obj/reload.o] Error 1
